// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`YearCell component YearCell renders 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
        >
          <div
            class="fieldGroup"
          >
            <div
              class="container input-year-picker-wrapper-read-only table--cell-value--date-readonly"
            >
              <div
                class="react-datepicker-wrapper"
              >
                <div
                  class="react-datepicker__input-container "
                >
                  <span
                    aria-live="polite"
                    class="react-datepicker__aria-live"
                    role="alert"
                  />
                  <input
                    autocomplete="off"
                    class="input-year-picker-input-read-only"
                    name="data"
                    placeholder="YYYY"
                    readonly=""
                    tabindex="-1"
                    type="text"
                    value="2022"
                  />
                </div>
              </div>
              <div />
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`YearCell component YearCell renders in edit mode and handles change 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
        >
          <div
            class="fieldGroup"
          >
            <div
              class="container"
            >
              <div
                class="react-datepicker-wrapper"
              >
                <div
                  class="react-datepicker__input-container "
                >
                  <span
                    aria-live="polite"
                    class="react-datepicker__aria-live"
                    role="alert"
                  />
                  <input
                    autocomplete="off"
                    class="input-year-picker-input"
                    name="data"
                    placeholder="YYYY"
                    tabindex="0"
                    type="text"
                    value="2022"
                  />
                </div>
              </div>
              <div />
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`YearCell component YearCell renders in edit mode via extra 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
        >
          <div
            class="fieldGroup"
          >
            <div
              class="container"
            >
              <div
                class="react-datepicker-wrapper"
              >
                <div
                  class="react-datepicker__input-container "
                >
                  <span
                    aria-live="polite"
                    class="react-datepicker__aria-live"
                    role="alert"
                  />
                  <input
                    autocomplete="off"
                    class="input-year-picker-input"
                    name="data"
                    placeholder="YYYY"
                    tabindex="0"
                    type="text"
                    value="2022"
                  />
                </div>
              </div>
              <div />
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`YearCell component YearCell renders when hidden 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
          style="display: none;"
        >
          <div
            class="fieldGroup"
          >
            <div
              class="container input-year-picker-wrapper-read-only table--cell-value--date-readonly"
            >
              <div
                class="react-datepicker-wrapper"
              >
                <div
                  class="react-datepicker__input-container "
                >
                  <span
                    aria-live="polite"
                    class="react-datepicker__aria-live"
                    role="alert"
                  />
                  <input
                    autocomplete="off"
                    class="input-year-picker-input-read-only"
                    name="data"
                    placeholder="YYYY"
                    readonly=""
                    tabindex="-1"
                    type="text"
                    value="2022"
                  />
                </div>
              </div>
              <div />
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`YearCell component YearCell renders with forced value 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
        >
          <div
            class="fieldGroup"
          >
            <div
              class="container input-year-picker-wrapper-read-only table--cell-value--date-readonly"
            >
              <div
                class="react-datepicker-wrapper"
              >
                <div
                  class="react-datepicker__input-container "
                >
                  <span
                    aria-live="polite"
                    class="react-datepicker__aria-live"
                    role="alert"
                  />
                  <input
                    autocomplete="off"
                    class="input-year-picker-input-read-only"
                    name="data"
                    placeholder="YYYY"
                    readonly=""
                    tabindex="-1"
                    type="text"
                    value="2022"
                  />
                </div>
              </div>
              <div />
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
